# iOmy

./: .gitignore  .gitmodules  LICENSE  README.md
capsicumwebserver/: .gitignore
capsicumwebserver/CapsicumWebServer/: settings.gradle
capsicumwebserver/scripts/: .gitignore  makewebserverassets.sh
cross_compile_android/: compile_env.sh  download_source.cfg  download_source.sh  make_standalone.sh  package_info.sh
cross_compile_android/compat_getpwent/: getpwent.c  readme.txt
cross_compile_android/download/: busybox-android.config  busybox-capability.patch  busybox_android_not_missing_tcdrain_syscall.patch  busybox_android_remove_r_option_from_ldflags.patch  lighttpd_1.4.49_accept4_not_available.patch  lighttpd_accept4_not_available.patch  lighttpd_embedded_arm_support_custom_by_capsicumcorp_for_lighttpd_1.4.39.diff  lighttpd_embedded_arm_support_custom_by_capsicumcorp_for_lighttpd_1.4.43.diff  lighttpd_embedded_arm_support_custom_by_capsicumcorp_for_lighttpd_1.4.49.diff  lighttpd_plugin-static.h  mysql_android_handle_missing_posix_fadvise.patch  mysql_change_s_iread_and_s_iwrite_to_s_irusr_and_s_iwusr.patch  mysql_define_ushort.patch  mysql_fseeko_workaround.patch  mysql_skip_wchar_iso_10646_check.patch  php_android_fixes_2.patch  php_change_s_iread_and_s_iwrite_to_s_irusr_and_s_iwusr.patch  php_check_for_have_setlocale_before_using.patch  php_check_for_have_setlocale_before_using_7.1.patch  php_dont_reference_password_extension_if_crypt_not_available.patch  php_dont_reference_password_extension_if_crypt_not_available_7.1.patch  php_include_locale_h_if_setlocale.patch  php_mysql_define_variable_as_lerrno_instead_of_errno.patch  php_mysql_define_variable_as_lerrno_instead_of_errno_7.1.patch  php_patch_mysql_ushort_def_from_sys_types_linux_header.patch  php_posix_gecos_not_available_on_android.patch  php_posix_gecos_not_available_on_android_7.1.patch  php_string_fix_sizeof_check.patch
cross_compile_android/glob/: glob.c  glob.h  readme.txt
cross_compile_android/libdl_stub/: libdl.c  readme.txt
cross_compile_android/mysql/: extra_bootstrap.sql
iomyapp/: .gitignore  build.gradle  gradle.properties  settings.gradle
iomyapp/app/: build.gradle  proguard-rules.pro
iomyapp/scripts/: .gitignore  compare_iomy_apks.sh  download_binaries.cfg  download_binaries.sh  makebinaryarchivefiles.sh  makewebserverassets.sh  package_info.sh
iomyweb/: README  index.php  iomyserver.php
iomyweb/restricted/odata/: index.php  (+7 more)
watchinputs/: .gitignore
watchinputs/CSRmeshLibrary/: CSRmeshLibrary.aar  build.gradle  spongy_castle_licence.txt
watchinputs/WatchInputsAndroid/: build.gradle  common_c_ndkbuild.gradle  common_cpp_ndkbuild.gradle
watchinputs/WatchInputsAndroidStudio/: build.gradle  buildndk.sh  settings.gradle
watchinputs/watch_inputs/: THREAD_SAFETY.txt  compile_debug.sh  compile_release.sh  configure.ac  readme.txt  run_make.sh  setup_configure.sh
watchinputs/watch_inputs/m4/: mysql.m4
watchinputs/watch_inputs/resources/: zigbeedefs.ini
watchinputs/watch_inputs/src/: Makefile.am  android_config.h  moduleinterface.h
watchinputs/watch_inputs/src/main/: build.gradle  mainlib.c  mainlib.h  watch_inputs.c  watch_inputs.h
watchinputs/watch_inputs/src/modules/: Makefile.am  moduledefs.txt
watchinputs/watch_inputs/src/modules/bluetoothhwandroidlib/: bluetoothhwandroidlib.cpp  bluetoothhwandroidlib.hpp  build.gradle
watchinputs/watch_inputs/src/modules/cameralib/: Makefile.am  build.gradle  cameralib.cpp  cameralibpriv.hpp
watchinputs/watch_inputs/src/modules/cmdserverlib/: Makefile.am  build.gradle  cmdserverlib.c  cmdserverlib.cpp  cmdserverlib.h
watchinputs/watch_inputs/src/modules/commonlib/: Makefile.am  build.gradle  commonlib.c  commonlib.h
watchinputs/watch_inputs/src/modules/commonserverlib/: Makefile.am  build.gradle  commonserverlib.c  commonserverlib.h
watchinputs/watch_inputs/src/modules/configlib/: Makefile.am  build.gradle  configlib.cpp  configlib.h  configlib.hpp
watchinputs/watch_inputs/src/modules/dbcounterlib/: Makefile.am  build.gradle  dbcounterlib.c  dbcounterlib.h
watchinputs/watch_inputs/src/modules/dblib/: Makefile.am  build.gradle  dblib.c  dblib.h
watchinputs/watch_inputs/src/modules/debuglib/: Makefile.am  build.gradle  debuglib.c  debuglib.h
watchinputs/watch_inputs/src/modules/httpserverlib/: Makefile.am  build.gradle  httpserverlib.c  httpserverlib.h
watchinputs/watch_inputs/src/modules/locklib/: Makefile.am  build.gradle  locklib.cpp  locklib.h  locklibpriv.h
watchinputs/watch_inputs/src/modules/mysqllib/: Makefile.am  build.gradle  mysqllib.cpp  mysqllib.h
watchinputs/watch_inputs/src/modules/nativeseriallib/: Makefile.am  nativeseriallib.c  nativeseriallib.h
watchinputs/watch_inputs/src/modules/rapidhalib/: Makefile.am  build.gradle  rapidhalib.c  rapidhalib.cpp  rapidhalib.h
watchinputs/watch_inputs/src/modules/ruleslib/: Makefile.am  build.gradle  ruleslib.cpp  ruleslibpriv.hpp
watchinputs/watch_inputs/src/modules/serialportlib/: Makefile.am  build.gradle  serialportlib.c  serialportlib.h
watchinputs/watch_inputs/src/modules/simclist/: Makefile.am  build.gradle  simclist.c  simclist.h
watchinputs/watch_inputs/src/modules/timeruleslib/: Makefile.am  build.gradle  timeruleslib.cpp  timeruleslib.h  timeruleslib.hpp
watchinputs/watch_inputs/src/modules/tizigbeelib/: Makefile.am  build.gradle  tizigbeelib.cpp  tizigbeelibpriv.hpp
watchinputs/watch_inputs/src/modules/userspaceusbserialandroidlib/: Makefile.am  build.gradle  userspaceusbserialandroidlib.c  userspaceusbserialandroidlib.h
watchinputs/watch_inputs/src/modules/webapiclientlib/: Makefile.am  build.gradle  webapiclientlib.cpp  webapiclientlib.hpp
watchinputs/watch_inputs/src/modules/xbeelib/: Makefile.am  build.gradle  xbeelib.c  xbeelib.h
watchinputs/watch_inputs/src/modules/zigbeelib/: Makefile.am  build.gradle  zigbeelib.cpp  zigbeelib.h  zigbeelib_zigbeedeviceids.c.inc  zigbeelib_zigbeedeviceids.h  zigbeelib_zigbeezclcmds.c.inc  zigbeelib_zigbeezclcmds.h  zigbeelib_zigbeezclstatus.c.inc  zigbeelib_zigbeezclstatus.h  zigbeelibpriv.h
(+3278 files in other folders)
