if LINK_MYSQLPLUGIN
  USE_MYSQLLIB=mysqllib
endif

SUBDIRS = simclist debuglib commonserverlib cmdserverlib dbcounterlib configlib httpserverlib nativeseriallib commonlib dblib rapidhalib serialportlib zigbeelib xbeelib webapiclientlib locklib $(USE_MYSQLLIB) timeruleslib tizigbeelib ruleslib cameralib
