lib_LTLIBRARIES = cameralib.la
cameralib_la_SOURCES = cameralib.cpp
cameralib_la_LDFLAGS = -module -version-info 0:0:0 $(BOOST_THREAD_LDFLAGS)
if CAMERALIB_LOCKDEBUG
  ENABLE_CAMERALIB_LOCKDEBUG=-DCAMERALIB_LOCKDEBUG
endif
if CAMERALIB_MOREDEBUG
  ENABLE_CAMERALIB_MOREDEBUG=-DCAMERALIB_MOREDEBUG
endif
cameralib_la_LIBADD=$(BOOST_THREAD_LIBS) $(BOOST_CHRONO_LIBS)

AM_CPPFLAGS=$(ENABLE_CAMERALIB_LOCKDEBUG) $(ENABLE_CAMERALIB_MOREDEBUG) $(BOOST_CPPFLAGS)
AM_CFLAGS=-I$(top_srcdir)/src $(COMMONCFLAGS) $(AM_CFLAGS)
AM_CXXFLAGS=-I$(top_srcdir)/src $(COMMONCPPFLAGS)

