lib_LTLIBRARIES = mysqllib.la
mysqllib_la_SOURCES = mysqllib.cpp
mysqllib_la_LDFLAGS = -module -version-info 0:0:0
if LINK_LIBPTHREAD
  USE_LIBPTHREAD=-lpthread
endif
#if MYSQLLIB_LOCKDEBUG
#  ENABLE_MYSQLLIB_LOCKDEBUG=-DMYSQLLIB_LOCKDEBUG
#endif
#if MYSQLLIB_MOREDEBUG
#  ENABLE_MYSQLLIB_MOREDEBUG=-DMYSQLLIB_MOREDEBUG
#endif
mysqllib_la_LIBADD=$(USE_LIBPTHREAD) -lrt $(MYSQL_CLIENT_LIBS)

AM_CFLAGS=-I$(top_srcdir)/src $(COMMONCFLAGS) $(ENABLE_MYSQLLIB_LOCKDEBUG) $(ENABLE_MYSQLLIB_MOREDEBUG) $(MYSQL_CLIENT_CFLAGS)
AM_CXXFLAGS=-I$(top_srcdir)/src $(COMMONCPPFLAGS) $(ENABLE_MYSQLLIB_LOCKDEBUG) $(ENABLE_MYSQLLIB_MOREDEBUG) $(MYSQL_CLIENT_CFLAGS)
