lib_LTLIBRARIES = rapidhalib.la
rapidhalib_la_SOURCES = rapidhalib.cpp
rapidhalib_la_LDFLAGS = -module -version-info 0:0:0 ${BOOST_SYSTEM_LDFLAGS} $(BOOST_THREAD_LDFLAGS)
if LINK_LIBPTHREAD
  USE_LIBPTHREAD=-lpthread
endif
if RAPIDHALIB_LOCKDEBUG
  ENABLE_RAPIDHALIB_LOCKDEBUG=-DRAPIDHALIB_LOCKDEBUG
endif
if RAPIDHALIB_MOREDEBUG
  ENABLE_RAPIDHALIB_MOREDEBUG=-DRAPIDHALIB_MOREDEBUG
endif
rapidhalib_la_LIBADD=$(USE_LIBPTHREAD) -lrt ${BOOST_SYSTEM_LDFLAGS} $(BOOST_THREAD_LIBS)

AM_CFLAGS=-I$(top_srcdir)/src $(COMMONCFLAGS) $(ENABLE_RAPIDHALIB_LOCKDEBUG) $(ENABLE_RAPIDHALIB_MOREDEBUG)
AM_CXXFLAGS=-I$(top_srcdir)/src $(COMMONCPPFLAGS) $(ENABLE_RAPIDHALIB_LOCKDEBUG) $(ENABLE_RAPIDHALIB_MOREDEBUG)
