lib_LTLIBRARIES = ruleslib.la
ruleslib_la_SOURCES = ruleslib.cpp
ruleslib_la_LDFLAGS = -module -version-info 0:0:0
if LINK_LIBPTHREAD
  USE_LIBPTHREAD=-lpthread
endif
if RULESLIB_LOCKDEBUG
  ENABLE_RULESLIB_LOCKDEBUG=-DRULESLIB_LOCKDEBUG
endif
if RULESLIB_MOREDEBUG
  ENABLE_RULESLIB_MOREDEBUG=-DRULESLIB_MOREDEBUG
endif
ruleslib_la_LIBADD=$(USE_LIBPTHREAD) -lrt

AM_CFLAGS=-I$(top_srcdir)/src $(COMMONCFLAGS) $(ENABLE_RULESLIB_LOCKDEBUG) $(ENABLE_RULESLIB_MOREDEBUG)
AM_CXXFLAGS=-I$(top_srcdir)/src $(COMMONCPPFLAGS) $(ENABLE_RULESLIB_LOCKDEBUG) $(ENABLE_RULESLIB_MOREDEBUG)
