lib_LTLIBRARIES = ruleslib.la
ruleslib_la_SOURCES = ruleslib.cpp
ruleslib_la_LDFLAGS = -module -version-info 0:0:0 $(BOOST_THREAD_LDFLAGS)
if RULESLIB_LOCKDEBUG
  ENABLE_RULESLIB_LOCKDEBUG=-DRULESLIB_LOCKDEBUG
endif
if RULESLIB_MOREDEBUG
  ENABLE_RULESLIB_MOREDEBUG=-DRULESLIB_MOREDEBUG
endif
ruleslib_la_LIBADD=$(BOOST_THREAD_LIBS) $(BOOST_CHRONO_LIBS)

AM_CPPFLAGS=$(ENABLE_RULESLIB_LOCKDEBUG) $(ENABLE_RULESLIB_MOREDEBUG) $(BOOST_CPPFLAGS)
AM_CFLAGS=-I$(top_srcdir)/src $(COMMONCFLAGS) $(AM_CFLAGS)
AM_CXXFLAGS=-I$(top_srcdir)/src $(COMMONCPPFLAGS)
