lib_LTLIBRARIES = tizigbeelib.la
tizigbeelib_la_SOURCES = tizigbeelib.cpp
tizigbeelib_la_LDFLAGS = -module -version-info 0:0:0
if LINK_LIBPTHREAD
  USE_LIBPTHREAD=-lpthread
endif
if TIZIGBEELIB_LOCKDEBUG
  ENABLE_TIZIGBEELIB_LOCKDEBUG=-DTIZIGBEELIB_LOCKDEBUG
endif
if TIZIGBEELIB_MOREDEBUG
  ENABLE_TIZIGBEELIB_MOREDEBUG=-DTIZIGBEELIB_MOREDEBUG
endif
tizigbeelib_la_LIBADD=$(USE_LIBPTHREAD) -lrt

AM_CFLAGS=-I$(top_srcdir)/src $(COMMONCFLAGS) $(ENABLE_TIZIGBEELIB_LOCKDEBUG) $(ENABLE_TIZIGBEELIB_MOREDEBUG)
AM_CXXFLAGS=-I$(top_srcdir)/src $(COMMONCPPFLAGS) $(ENABLE_TIZIGBEELIB_LOCKDEBUG) $(ENABLE_TIZIGBEELIB_MOREDEBUG)
