lib_LTLIBRARIES = xbeelib.la
xbeelib_la_SOURCES = xbeelib.c
xbeelib_la_LDFLAGS = -module -version-info 0:0:0
if LINK_LIBPTHREAD
  USE_LIBPTHREAD=-lpthread
endif
if XBEELIB_LOCKDEBUG
  ENABLE_XBEELIB_LOCKDEBUG=-DXBEELIB_LOCKDEBUG
endif
if XBEELIB_MOREDEBUG
  ENABLE_XBEELIB_MOREDEBUG=-DXBEELIB_MOREDEBUG
endif
xbeelib_la_LIBADD=$(USE_LIBPTHREAD) -lrt

AM_CFLAGS=-I$(top_srcdir)/src $(COMMONCFLAGS) $(ENABLE_XBEELIB_LOCKDEBUG) $(ENABLE_XBEELIB_MOREDEBUG)

