lib_LTLIBRARIES = zigbeelib.la
zigbeelib_la_SOURCES = zigbeelib.cpp
zigbeelib_la_LDFLAGS = -module -version-info 0:0:0
if LINK_LIBPTHREAD
  USE_LIBPTHREAD=-lpthread
endif
if ZIGBEELIB_LOCKDEBUG
  ENABLE_ZIGBEELIB_LOCKDEBUG=-DZIGBEELIB_LOCKDEBUG
endif
if ZIGBEELIB_MOREDEBUG
  ENABLE_ZIGBEELIB_MOREDEBUG=-DZIGBEELIB_MOREDEBUG
endif
if ZIGBEELIB_SENDDEBUG
  ENABLE_ZIGBEELIB_SENDDEBUG=-DZIGBEELIB_SENDDEBUG
endif
# Force monitoring of Zigbee devices even if the database hasn't loaded
if ZIGBEELIB_DEBUGWITHOUTDATABASE
  ENABLE_ZIGBEELIB_DEBUGWITHOUTDATABASE=-DZIGBEELIB_DEBUGWITHOUTDATABASE
endif
zigbeelib_la_LIBADD=$(USE_LIBPTHREAD) -lrt

AM_CFLAGS=-I$(top_srcdir)/src $(COMMONCFLAGS) $(ENABLE_ZIGBEELIB_LOCKDEBUG) $(ENABLE_ZIGBEELIB_MOREDEBUG) $(ENABLE_ZIGBEELIB_SENDDEBUG) $(ENABLE_ZIGBEELIB_DEBUGWITHOUTDATABASE)
AM_CXXFLAGS=-I$(top_srcdir)/src $(COMMONCPPFLAGS) $(ENABLE_ZIGBEELIB_LOCKDEBUG) $(ENABLE_ZIGBEELIB_MOREDEBUG) $(ENABLE_ZIGBEELIB_SENDDEBUG) $(ENABLE_ZIGBEELIB_DEBUGWITHOUTDATABASE)
